--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "http://bali.guide.outsite.co/"
 title = ""
 # for smart copyright line, leave this blank and check [params.copyright]
 copyright = ""
